--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <span></span>
             <div class="content">
                 <h2>Card One</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam quos reiciendis asperiores ducimus maxime provident nam perspiciatis ipsam libero, explicabo ipsum totam officiis itaque doloremque! Enim, dicta! Repudiandae, quisquam tempore?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, minima!</p>
                 <a href="#">Read More</a>
             </div>
         </div>
@@ -22,7 +22,7 @@
             <span></span>
             <div class="content">
                 <h2>Card Two</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam quos reiciendis asperiores ducimus maxime provident nam perspiciatis ipsam libero, explicabo ipsum totam officiis itaque doloremque! Enim, dicta! Repudiandae, quisquam tempore?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, minima!</p>
                 <a href="#">Read More</a>
             </div>
         </div>
@@ -31,7 +31,7 @@
             <span></span>
             <div class="content">
                 <h2>Card Three</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam quos reiciendis asperiores ducimus maxime provident nam perspiciatis ipsam libero, explicabo ipsum totam officiis itaque doloremque! Enim, dicta! Repudiandae, quisquam tempore?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, minima!</p>
                 <a href="#">Read More</a>
             </div>
         </div>
