--- a/index.html
+++ b/index.html
@@ -13,25 +13,23 @@
             <span></span>
             <div class="content">
                 <h2>Card One</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, minima!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, magnam.</p>
                 <a href="#">Read More</a>
             </div>
         </div>
-    <div class="container">
         <div class="box">
             <span></span>
             <div class="content">
                 <h2>Card Two</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, minima!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, magnam.</p>
                 <a href="#">Read More</a>
             </div>
         </div>
-    <div class="container">
         <div class="box">
             <span></span>
             <div class="content">
                 <h2>Card Three</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, minima!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, magnam.</p>
                 <a href="#">Read More</a>
             </div>
         </div>
